@@ -3,6 +3,8 @@ This this the changelog file for the Pothos C++ library.
 Release 0.2.0 (pending)
 ==========================
 
+- PothosUtil --print-tree renamed to --plugin-tree
+- PothosUtil --self-tests-at combined with --self-tests
 - Fixed automatic port deletion upon disconnection
 - Threading overhaul and performance improvements
 - Topology factory from JSON description
